# api-docs.yml
@@ -574,6 +574,51 @@ definitions:
         items:
           $ref: '#/definitions/EnvironmentSecret'
 
+  HostConfig:
+    type: object
+    properties:
+      id:
+        type: integer
+      project_id:
+        type: integer
+        minimum: 1
+      type:
+        type: string
+        enum: [host, url]
+        description: host matches an ssh host name, url matches a git URL or prefix
+      host:
+        type: string
+        example: github.com
+        description: an ssh host name, or a git URL/prefix for the url type
+      ssh_key_id:
+        type: integer
+        description: the ssh key used to reach the host
+        example: 1
+
+  HostConfigRequest:
+    type: object
+    required:
+      - project_id
+      - type
+      - host
+      - ssh_key_id
+    properties:
+      id:
+        type: integer
+        description: required on update, must equal the id in the path
+      project_id:
+        type: integer
+        minimum: 1
+      type:
+        type: string
+        enum: [host, url]
+      host:
+        type: string
+        example: github.com
+      ssh_key_id:
+        type: integer
+        example: 1
+
   InventoryRequest:
     type: object
     properties:
@@ -1524,6 +1569,13 @@ parameters:
   project_id:
     name: project_id
     description: Project ID
+    in: path
+    type: integer
+    required: true
+    x-example: 1
+  host_config_id:
+    name: host_config_id
+    description: Host config ID
     in: path
     type: integer
     required: true
@@ -2882,6 +2934,74 @@ paths:
           description: repository removed
 
   # project inventory
+  /project/{project_id}/host_configs:
+    parameters:
+      - $ref: "#/parameters/project_id"
+    get:
+      tags:
+        - project
+      summary: Get the credential mappings of the project
+      responses:
+        200:
+          description: host configs
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/HostConfig"
+    post:
+      tags:
+        - project
+      summary: Add a credential mapping
+      parameters:
+        - name: Host config
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/HostConfigRequest"
+      responses:
+        201:
+          description: host config created
+          schema:
+            $ref: "#/definitions/HostConfig"
+        400:
+          description: invalid mapping
+
+  /project/{project_id}/host_configs/{host_config_id}:
+    parameters:
+      - $ref: "#/parameters/project_id"
+      - $ref: "#/parameters/host_config_id"
+    get:
+      tags:
+        - project
+      summary: Get a credential mapping
+      responses:
+        200:
+          description: host config
+          schema:
+            $ref: "#/definitions/HostConfig"
+    put:
+      tags:
+        - project
+      summary: Update a credential mapping
+      parameters:
+        - name: Host config
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/HostConfigRequest"
+      responses:
+        204:
+          description: host config updated
+        400:
+          description: invalid mapping
+    delete:
+      tags:
+        - project
+      summary: Delete a credential mapping
+      responses:
+        204:
+          description: host config deleted
+
   /project/{project_id}/inventory:
     parameters:
       - $ref: "#/parameters/project_id"
